Optimize by moving away from Optional and Stream in hot code paths